--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,62 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.boton_actividades {
+  color: white;
+  position: fixed; 
+  top: 1px; 
+  left: 0.2%;
+  font-size: 80%; 
+  font-family: sans-serif;
+  
+  padding: 5px 20px;  
+  border-radius: 30px;   
+  background: rgba(255,255,255,0); 
+  
+  transition: all 0.2s ease-in-out; 
+}
+
+.boton_actividades:hover {
+  background: rgba(255,255,255,0.2); 
+  border-color: rgba(255,255,255,0.6); 
+}
+
+.boton_fecha {
+  color: white;
+  position: fixed; 
+  top: 1px; 
+  left: 48%;
+  font-size: 80%; 
+  font-family: sans-serif;
+  
+  padding: 5px 20px;  
+  border-radius: 30px;   
+  background: rgba(255,255,255,0); 
+  
+  transition: all 0.2s ease-in-out; 
+}
+
+.boton_fecha:hover {
+  background: rgba(255,255,255,0.2); 
+  border-color: rgba(255,255,255,0.6); 
+}
+
+.boton_recursos {
+  position: fixed; 
+  top: -2px; 
+  left: 92.5%;
+  border-radius: 30px; 
+  overflow: hidden;
+}
+
+.boton_recursos::after {
+  content: '';
+  position: absolute;
+  inset: 0;
+  background: rgba(255,255,255,0); /* invisible por defecto */
+  transition: background 0.2s ease-in-out;
+}
+
+.boton_recursos:hover::after {
+  background: rgba(255,255,255,0.2); /* capa que tapa la imagen al hover */
+}
